syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.auth";
option java_multiple_files = true;

package requests;

message LoginRequest {
  enum loginType {
    MAIL = 0;
    LOGIN = 1;
  }
  loginType type = 1;
  string userInfo = 2;
  string password = 3;
}
